--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "next start",
     "lint": "next lint",
     "deploy:vercel": "node scripts/deploy.js",
-    "cleanup": "lsof -ti :3000 | xargs kill -9"
+    "cleanup": "lsof -ti :3000 | xargs kill -9",
+    "test:zoiner": "node scripts/test-zoiner.js"
   },
   "dependencies": {
     "@farcaster/auth-client": ">=0.3.0 <1.0.0",
@@ -26,9 +27,13 @@
     "@farcaster/frame-node": ">=0.0.18 <1.0.0",
     "@farcaster/frame-sdk": ">=0.0.31 <1.0.0",
     "@farcaster/frame-wagmi-connector": ">=0.0.19 <1.0.0",
+    "@neynar/nodejs-sdk": "^2.19.0",
+    "@neynar/react": "^0.9.7",
     "@radix-ui/react-label": "^2.1.1",
     "@tanstack/react-query": "^5.61.0",
     "@upstash/redis": "^1.34.3",
+    "@zoralabs/coins-sdk": "^0.1.1",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -36,15 +41,14 @@
     "mipd": "^0.0.7",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
+    "pinata": "^2.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.23.6",
+    "viem": "^2.30.5",
     "wagmi": "^2.14.12",
-    "zod": "^3.24.2",
-    "@neynar/nodejs-sdk": "^2.19.0",
-    "@neynar/react": "^0.9.7"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
