--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "next lint",
     "deploy:vercel": "node scripts/deploy.js",
     "cleanup": "lsof -ti :3000 | xargs kill -9",
-    "test:zoiner": "node scripts/test-zoiner.js"
+    "test:zoiner": "node scripts/test-zoiner.js",
+    "test:ai-agent": "node scripts/test-ai-agent.js"
   },
   "dependencies": {
     "@farcaster/auth-client": ">=0.3.0 <1.0.0",
@@ -30,6 +31,7 @@
     "@neynar/nodejs-sdk": "^2.19.0",
     "@neynar/react": "^0.9.7",
     "@radix-ui/react-label": "^2.1.1",
+    "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.61.0",
     "@upstash/redis": "^1.34.3",
     "@zoralabs/coins-sdk": "^0.1.1",
