--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "start": "next start",
     "lint": "next lint",
     "deploy:vercel": "node scripts/deploy.js",
-    "cleanup": "lsof -ti :3000 | xargs kill -9",
-    "test:zoiner": "node scripts/test-zoiner.js",
-    "test:ai-agent": "node scripts/test-ai-agent.js"
+    "cleanup": "lsof -ti :3000 | xargs kill -9"
   },
   "dependencies": {
     "@farcaster/auth-client": ">=0.3.0 <1.0.0",
@@ -34,7 +32,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.61.0",
     "@upstash/redis": "^1.34.3",
-    "@zoralabs/coins-sdk": "^0.1.1",
+    "@zoralabs/coins-sdk": "^0.1.1", 
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
